--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                                                     <div class="april-fools"><h4>Personal Portfolio April Fools</h4></div>
                                                     <div class="university">University of DVI (1997 - 2001)</div>
                                                 </div>
-                                                <div class=" col-4 "><div class="btn btn-primary">4.35/5</div> </div>
+                                                <div class=" col-4"><div class="btn btn-color">4.35/5</div> </div>
                                             </div>
                                             <div class="lower-box">
                                                 The education should be very interactual. Ut tincidunt est ac dolor aliquam sodales. Phasellus sed mauris hendrerit, laoreet sem in, lobortis mauris hendrerit ante.
@@ -303,7 +303,7 @@
                                                     <div class="april-fools"><h4>Personal Portfolio April Fools</h4></div>
                                                     <div class="university">University of DVI (1997 - 2001)</div>
                                                 </div>
-                                                <div class=" col-4 "><div class="btn btn-primary">4.35/5</div> </div>
+                                                <div class=" col-4 "><div class="btn btn-color">4.35/5</div> </div>
                                             </div>
                                             <div class="lower-box">
                                                 The education should be very interactual. Ut tincidunt est ac dolor aliquam sodales. Phasellus sed mauris hendrerit, laoreet sem in, lobortis mauris hendrerit ante.
@@ -318,7 +318,7 @@
                                                     <div class="april-fools"><h4>Personal Portfolio April Fools</h4></div>
                                                     <div class="university">University of DVI (1997 - 2001)</div>
                                                 </div>
-                                                <div class=" col-4 "><div class="btn btn-primary">4.35/5</div> </div>
+                                                <div class=" col-4 "><div class="btn btn-color">4.35/5</div> </div>
                                             </div>
                                             <div class="lower-box">
                                                 The education should be very interactual. Ut tincidunt est ac dolor aliquam sodales. Phasellus sed mauris hendrerit, laoreet sem in, lobortis mauris hendrerit ante.
@@ -342,7 +342,7 @@
                                                     <div class="april-fools"><h4>Personal Portfolio April Fools</h4></div>
                                                     <div class="university">University of DVI (1997 - 2001)</div>
                                                 </div>
-                                                <div class=" col-4 "><div class="btn btn-primary">4.35/5</div> </div>
+                                                <div class=" col-4 "><div class="btn btn-color">4.35/5</div> </div>
                                             </div>
                                             <div class="lower-box">
                                                 The education should be very interactual. Ut tincidunt est ac dolor aliquam sodales. Phasellus sed mauris hendrerit, laoreet sem in, lobortis mauris hendrerit ante.
@@ -358,7 +358,7 @@
                                                     <div class="april-fools"><h4>Personal Portfolio April Fools</h4></div>
                                                     <div class="university">University of DVI (1997 - 2001)</div>
                                                 </div>
-                                                <div class=" col-4 "><div class="btn btn-primary">4.35/5</div> </div>
+                                                <div class=" col-4 "><div class="btn btn-color">4.35/5</div> </div>
                                             </div>
                                             <div class="lower-box">
                                                 The education should be very interactual. Ut tincidunt est ac dolor aliquam sodales. Phasellus sed mauris hendrerit, laoreet sem in, lobortis mauris hendrerit ante.
@@ -373,7 +373,7 @@
                                                     <div class="april-fools"><h4>Personal Portfolio April Fools</h4></div>
                                                     <div class="university">University of DVI (1997 - 2001)</div>
                                                 </div>
-                                                <div class=" col-4 "><div class="btn btn-primary">4.35/5</div> </div>
+                                                <div class=" col-4 "><div class="btn btn-color">4.35/5</div> </div>
                                             </div>
                                             <div class="lower-box">
                                                 The education should be very interactual. Ut tincidunt est ac dolor aliquam sodales. Phasellus sed mauris hendrerit, laoreet sem in, lobortis mauris hendrerit ante.
@@ -470,7 +470,7 @@
         <div class="clients px-5">
             <div class="row ">
                 <div class="col-12 my-5">
-                    <h5>Popular Clients</h5>
+                    <h5 class="subtitle">Popular Clients</h5>
                     <h1>Awesome Clients</h1>
                 </div>
                 <div class="col-12">
@@ -478,22 +478,22 @@
                         <div class="col-4">
                             <div class="row" id="clients-left-item">
                                 <div class="col-12 py-4 px-5 bg-primary d-flex justify-content-center">
-                                    <h3>Java Script</h3>
+                                    <h5>Java Script</h5>
                                 </div>
                                 <div class="col-12 py-4 px-5  d-flex justify-content-center">
-                                    <h3>Product Design</h3>
+                                    <h5>Product Design</h5>
                                 </div>
                                 <div class="col-12 py-4 px-5 d-flex justify-content-center">
-                                    <h3>Wordpress</h3>
+                                    <h5>Wordpress</h5>
                                 </div>
                                 <div class="col-12 py-4 px-5 d-flex justify-content-center">
-                                    <h3>HTML to React</h3>
+                                    <h5>HTML to React</h5>
                                 </div>
                                 <div class="col-12 py-4 px-5 d-flex justify-content-center">
-                                    <h3>React to Laravel</h3>
+                                    <h5>React to Laravel</h5>
                                 </div>
                                 <div class="col-12 py-4 px-5 d-flex justify-content-center">
-                                    <h3>Python</h3>
+                                    <h5>Python</h5>
                                 </div>
                             </div>
                         </div>
@@ -642,7 +642,7 @@
                         <div class="col-12">
                             <div class="row" id="static">
                                 <div class="col-4 px-5 py-4 d-flex justify-content-center"><h5>Static</h5></div>
-                                <div class="col-4 px-5 py-4 d-flex justify-content-center"><h5>Standard</h5></div>
+                                <div class="col-4 px-5 py-4 active d-flex justify-content-center"><h5>Standard</h5></div>
                                 <div class="col-4 px-5 py-4 d-flex justify-content-center"><h5>Premium</h5></div>
                             </div>
                         </div>
@@ -831,7 +831,7 @@
                                     <textarea style="resize: none;" name="message" id="" class="form-control" cols="30" rows="10" required></textarea>
                                 </div>
                                 <div class="form-group">
-                                    <input type="submit" value="SEND MESSAGE" class="form-control py-3">
+                                    <input type="submit" value="SEND MESSAGE" class="form-control py-3 new active">
                                 </div>
                             </form>
                         </div>
