--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <link rel="fav-icon" href="image/logo-vertical-dark.png"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&family=Poppins:wght@400;600;700&family=Roboto&family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
-    <title>Project-bootstrap</title>
+    <title>Project-3 using bootstrap</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
